done with initial sidebar

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -44,7 +44,7 @@
     color: white;
 }
 
-.sidebar__voice{
+.sidebar__voice, .sidebar__profile{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -73,6 +73,20 @@
 
 .sidebar__voiceIcons .MuiSvgIcon-root{
     padding: 10px;
+    cursor: pointer;
+}
+
+.sidebar__profileInfo{
+    flex: 1;
+    padding: 10px;
+}
+
+.sidebar__profileInfo h3{
+    color: white;
+}
+
+.sidebar__profileIcons .MuiSvgIcon-root{
+    padding: 5px;
     cursor: pointer;
 }
 
