added auto scroll and made a few tweaks

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -9,6 +9,7 @@
 
 .sidebar__channels{
     flex: 1;
+    overflow-y: scroll;
 
 }
 
@@ -33,6 +34,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 .sidebar__addChannel{
