deployed and made scrollbar display none

--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -11,6 +11,12 @@
 .chat__messages{
     flex: 1;
     overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.chat__messages::-webkit-scrollbar{
+    display: none;
 }
 
 .chat__input{
